Fix client run script dispatch